--- a/SimpleGame/SimpleGame.vcxproj.filters
+++ b/SimpleGame/SimpleGame.vcxproj.filters
@@ -61,5 +61,17 @@
     <None Include="Shaders\SandBox.vs">
       <Filter>소스 파일\Shaders</Filter>
     </None>
+    <None Include="Shaders\AlphaClear.fs">
+      <Filter>소스 파일\Shaders</Filter>
+    </None>
+    <None Include="Shaders\AlphaClear.vs">
+      <Filter>소스 파일\Shaders</Filter>
+    </None>
+    <None Include="Shaders\VertexSandBox.fs">
+      <Filter>소스 파일\Shaders</Filter>
+    </None>
+    <None Include="Shaders\VertexSandBox.vs">
+      <Filter>소스 파일\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
