--- a/SimpleGame/SimpleGame.vcxproj
+++ b/SimpleGame/SimpleGame.vcxproj
@@ -155,11 +155,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="LoadPng.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="LoadPng.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="SimpleGame.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -178,6 +180,8 @@
     <None Include="Shaders\SandBox.vs" />
     <None Include="Shaders\SolidRect.fs" />
     <None Include="Shaders\SolidRect.vs" />
+    <None Include="Shaders\TextureSandbox.fs" />
+    <None Include="Shaders\TextureSandbox.vs" />
     <None Include="Shaders\VertexSandBox.fs" />
     <None Include="Shaders\VertexSandBox.vs" />
   </ItemGroup>
