--- a/SimpleGame/SimpleGame.vcxproj.filters
+++ b/SimpleGame/SimpleGame.vcxproj.filters
@@ -91,5 +91,11 @@
     <None Include="Shaders\Flag_By_Vertex.vs">
       <Filter>소스 파일\Shaders</Filter>
     </None>
+    <None Include="Shaders\DrawTexture.fs">
+      <Filter>소스 파일\Shaders</Filter>
+    </None>
+    <None Include="Shaders\DrawTexture.vs">
+      <Filter>소스 파일\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
