--- a/SimpleGame/SimpleGame.vcxproj
+++ b/SimpleGame/SimpleGame.vcxproj
@@ -178,12 +178,19 @@
     <None Include="Shaders\DrawTexture.vs" />
     <None Include="Shaders\Flag_By_Vertex.fs" />
     <None Include="Shaders\Flag_By_Vertex.vs" />
+    <None Include="Shaders\GaussianBlur.vs" />
+    <None Include="Shaders\GaussianBlurH.fs" />
+    <None Include="Shaders\GaussianBlurV.fs" />
+    <None Include="Shaders\MergeTexture.fs" />
+    <None Include="Shaders\MergeTexture.vs" />
     <None Include="Shaders\Particle.fs" />
     <None Include="Shaders\Particle.vs" />
     <None Include="Shaders\SandBox.fs" />
     <None Include="Shaders\SandBox.vs" />
     <None Include="Shaders\SolidRect.fs" />
     <None Include="Shaders\SolidRect.vs" />
+    <None Include="Shaders\StudyShader.fs" />
+    <None Include="Shaders\StudyShader.vs" />
     <None Include="Shaders\TextureSandbox.fs" />
     <None Include="Shaders\TextureSandbox.vs" />
     <None Include="Shaders\VertexSandBox.fs" />
